--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -29,6 +29,36 @@
   opacity: 0.9;
 }
 
+.counter-section {
+  position: relative;
+  width: 100%;
+  min-height: 200px;
+  z-index: 2;
+  /* Estilos para la sección del contador */
+}
+
+.background-overlay-section {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  z-index: 1;
+}
+
+.background-overlay-section::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url('http://plotcenter.com.ar/wp-content/uploads/2026/01/Recurso-1-3.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  z-index: -1;
+}
+
 .home-main {
   flex: 1;
   padding: 60px 20px;
