--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -2,6 +2,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .home-header {
@@ -33,7 +34,7 @@
   position: relative;
   width: 100%;
   min-height: 200px;
-  z-index: 2;
+  z-index: 3;
   /* Estilos para la sección del contador */
 }
 
@@ -41,19 +42,31 @@
   position: relative;
   width: 100%;
   min-height: 100vh;
+  z-index: 1;
+  display: block;
+  padding: 0;
+  overflow: hidden;
+}
+
+.background-overlay-section::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-image: url('https://plotcenter.com.ar/wp-content/uploads/2026/01/Recurso-1-3.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  z-index: 1;
-  display: block;
-  padding: 0;
+  z-index: -1;
+  pointer-events: none;
 }
 
 .background-overlay-section .home-main {
   position: relative;
-  z-index: 2;
+  z-index: 1;
+  background: transparent;
 }
 
 .home-main {
