--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -42,25 +42,14 @@
   position: relative;
   width: 100%;
   min-height: 100vh;
-  z-index: 1;
-  display: block;
-  padding: 0;
-  overflow: hidden;
-}
-
-.background-overlay-section::before {
-  content: '';
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
   background-image: url('https://plotcenter.com.ar/wp-content/uploads/2026/01/Recurso-1-3.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  z-index: -1;
-  pointer-events: none;
+  background-attachment: fixed;
+  z-index: 1;
+  display: block;
+  padding: 0;
 }
 
 .background-overlay-section .home-main {
